# CostSplit

./: Car_Expenses  README.md  Untitled.ipynb  cost_splitter.py  h.txt  index.md  nwf.py  pyproject.toml  splitwise_classes.py  splitwise_functions.py
other/ruby/: class Person.rb
python/: split_driver_pub_may21.py  splitwise_functions.py
ruby/: Car_Expenses.rb
src/costsplit/: Person.py  Settlement.py  Transaction.py  Trip.py  cost_splitter_allinone2.py  example_config.yml  from_config.py  graph.py  split_driver.py  splitwise_classes.py  test_prepay.py
src/costsplit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
